--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,10 +30,22 @@ play.i18n.langs = [ "en" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
+
+mycoffee = {
+  url = "jdbc:h2:./db/coffee"
+  driver = "org.h2.Driver"
+  username = ""
+  password = ""
+}
+
+#slick.dbs.default.driver="slick.driver.H2Driver$"
+#slick.dbs.default.db.driver="org.h2.Driver"
+#slick.dbs.default.db.url="jdbc:h2:./db/coffee"
+
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:./db/coffee"
+#db.default.username=coffee
+#db.default.password=""
 
 # Evolutions
 # ~~~~~
