--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,7 +32,7 @@ play.i18n.langs = [ "en" ]
 #
 
 mycoffee = {
-  url = "jdbc:h2:./db/coffee"
+  url = "jdbc:h2:./db/coffee;AUTO_SERVER=TRUE"
   driver = "org.h2.Driver"
   username = ""
   password = ""
