Use play-slick and inject database into Controller

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,21 +31,11 @@ play.i18n.langs = [ "en" ]
 # By convention, the default datasource is named `default`
 #
 
-mycoffee = {
-  url = "jdbc:h2:./db/coffee;AUTO_SERVER=TRUE"
-  driver = "org.h2.Driver"
-  username = ""
-  password = ""
-}
-
-#slick.dbs.default.driver="slick.driver.H2Driver$"
-#slick.dbs.default.db.driver="org.h2.Driver"
-#slick.dbs.default.db.url="jdbc:h2:./db/coffee"
-
-#db.default.driver=org.h2.Driver
-#db.default.url="jdbc:h2:./db/coffee"
-#db.default.username=coffee
-#db.default.password=""
+slick.dbs.default.driver="slick.driver.H2Driver$"
+slick.dbs.default.db.driver="org.h2.Driver"
+slick.dbs.default.db.url="jdbc:h2:./db/coffee;AUTO_SERVER=TRUE"
+slick.dbs.default.db.username=""
+slick.dbs.default.db.password=""
 
 # Evolutions
 # ~~~~~
